--- a/app/views/homepage/new.html.erb
+++ b/app/views/homepage/new.html.erb
@@ -2,9 +2,9 @@
 <nav id="nav">
   <p id="logo"><img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
 </p>
-<p id="welcome">WELCOME TO BOJACK,A SUBPAR TWITTER BUT I STILL LOVE IT </p>
-<p id="login"><%= link_to sign_in_path, class:"signin" do %><button id="signin"> Sign In</button> <% end %>
-<%= link_to sign_up_path, class:"signup" do %><button id="signup"> Sign Up</button><% end %></p>
+<p id="login"><%= link_to sign_in_path, class:"login" do %><button id="signin"> Sign In</button> <% end %>
+<%= link_to sign_up_path, class:"login" do %><button id="signup"> Sign Up</button><% end %></p>
 </nav>
-<div class="image"><img src="https://media.giphy.com/media/RQOKBUgkY7F5u/giphy.gif" alt="" /></div>
+<center><p id="welcome">WELCOME TO BOJACK,A PLACE TO BE YOURSELF </p></center>
+
 </html>
