--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -4,7 +4,7 @@
 </nav>
   <div class="signinpage">
 
-      <h1 id="join">Welcome Back Boiiiii!!!</h1>
+      <h1 id="join">Welcome Back Kind Sir.</h1>
       <%= form_tag  do %>
         <div class="">
           <%= label_tag :email %>
@@ -16,7 +16,7 @@
         </div>
 
 
-        <%= submit_tag "Sign In", class: "signuplink" %>
+        <%= submit_tag "Welcome Back", class: "signuplink" %>
 
 
       <% end %>
