--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 </a><a>  <span class="glyphicon glyphicon-envelope" aria-hidden="true"> </span>  Messages</p>
 </a></strong>
 <img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
-<span class="follow" style="border-radius:15px;"> <%= link_to "FollowPeople", index_path %> </span>
+<span class="follow" style="border-radius:15px;"> <%= link_to "Follow People", index_path %> </span>
 
   <span class="signout" style="border-radius:15px;"> <%= link_to "Sign Out", sign_out_path %> </span>
 </nav>
@@ -14,7 +14,7 @@
 <div class="list">
 <center><p id="indexphoto"><%= link_to user_path(id: f.id), class:"user" do %><%= image_tag attachment_url(f, :photo, :fill, 200, 200, format: "jpg") %>
 <% end %> </p></center>
-<center><p id="indexname"><%= f.name %>
+<center><p id="indexname"><%= link_to user_path(id: f.id) do %><%= f.name %><%end%>
 @<%= f.user_name %></p></center>
 </div>
 <% end %>
