--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'Sign In', sign_in_path %>
 </nav>
 
-  <div class="signinpage">
+  <div class="signoutpage">
     <% if @user.errors.any? %>
       <%= pluralize(@user.errors.count, 'error') %> prevented your form from success.
       <ul class="mdl-list">
