--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -96,7 +96,8 @@ p.username {
 .showprofile {
   width:220px;
   height:320px;
-
+display:flex;
+flex-wrap: wrap;
 }
 
 #nameshow {
@@ -300,14 +301,56 @@ margin:10px;
   display:flex;
 }
 
-.posts {
-  margin-left: 200px;
-}
-
 .voting {
   display:flex;
 }
 
 .voting i{
   margin:0 3px 0 3px;
+}
+
+.followbtn {
+  width:90px;
+  height:30px;
+  background: white;
+  border: 2px solid #337AB7;
+  font-size: 20px;
+  border-radius: 10px;
+}
+
+html {
+ width:100%;
+ height:100%;
+}
+
+.posts {
+  width:45%;
+  height:100%;;
+  background-color: white;
+  position: absolute;
+  z-index:10;
+  margin-left:100px;
+  margin-top: 200px;
+  border-radius: 20px;
+  padding:10px;
+}
+
+.profilecontainer {
+  display:flex;
+  position:relative;
+
+}
+
+.text1 {
+  display:flex;
+  border-bottom: 2px solid black;
+}
+.text2 {
+  display:flex;
+  flex-direction: column;
+}
+
+.thoughts {
+  font-size: 25px;
+  font-weight: bold;
 }
