--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,89 +1,75 @@
-#signin {
-  background-color: #74DABB;
-  width:115px;
-  height:40px;
-  border-radius: 5px;
-  border: 2px solid white;
+#nav {
+  border:0px;
+display:flex;
+justify-content: space-between;
+margin:10px 10px 0 0;
 }
 
 #signup {
-  background-color: #74DABB;
-  width:115px;
-  height:40px;
+  background-color: white;
+  border:1px solid white;
   border-radius: 5px;
-  border: 2px solid white;
+  color:#3498DC;
+  height:30px;
+  width:80px;
+}
+
+#signin {
+  background-color: rgba(34, 422, 19, 0);
+  border:1px solid white;
+  border-radius: 5px;
+  color:white;
+  height:30px;
+  width:80px;
+  margin-right:5px;
 }
 
 #signup:hover {
-  background-color: white;
-  border-color: #74DABB;
+  background-color: #50c878;
+  color:white;
+  border:2px solid #50c878;
+
 }
+
 #signin:hover {
   background-color: white;
-  border-color: #74DABB;
-  text-decoration: none;
+  color:#3498DC;
+}
+.homepage-title {
+  background-image: linear-gradient(to right, #3498DC, #50c878 100%);
+  width:100%;
+  height:100vh;
+  display:flex;
+  flex-direction: column;
+font-family: 'Roboto', sans-serif;
+  padding-top: 10px;
 }
 
-.signin {
-  text-decoration: none;
-  color:#1DA1F2;
-}
-.signup {
-  text-decoration: none;
-  color:#1DA1F2;
-}
-#nav img {
-  width:60px;
-  height: 50px;
-  margin-top: 0px;
-
-}
-#nav {
-  display: flex;
-  background-color: #009999;
-  width: 100%;
-  height :100px;
+.homepage-p1 {
+  color:white;
+  font-size: 60px;
+  align-self: center;
+  margin:0px;
 }
 
-#logo {
-  width:60px;
+.homepage-p2 {
+  color:white;
+  font-size: 30px;
+  align-self: center;
+}
+
+.homepage-title img {
+  width:50px;
   height:50px;
   margin-left: 10px;
 }
 
-#login {
-  height:50px;
-  width:235px;
-  margin-top:5px;
-  margin-right:5px;
-}
 
-#welcome {
-  color:#009999;
-  width:100%;
-  height:200px;
-  font-weight: lighter;
-  font-size: 80px;
-  align-self: center;
-}
-
-.image img{
-  width:650px;
-  height: 500px;
-  position:absolute;
-  border-radius: 25px;
-  border:4px solid white;
-  left:200px;
-  top:120px;
-}
-body {
-  background-color: #F5F8FA;
-}
-
-.signin a{
-  text-decoration: none;
-}
-
-.image {
-  width:100%;
+@media screen and (max-width:415px) {
+  .homepage-p1{
+    font-size: 40px;
+  }
+  .homepage-p2 {
+    font-size: 25px;
+  }
 }
