--- a/app/views/homepage/new.html.erb
+++ b/app/views/homepage/new.html.erb
@@ -1,10 +1,11 @@
-<html>
-<nav id="nav">
-  <p id="logo"><img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
+<div class="homepage-title">
+  <div id="nav">
+  <img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
+<p style="margin=0px;">
+<%= link_to sign_in_path, class:"login" do %><button id="signin"> Sign In</button> <% end %>
+<%= link_to sign_up_path, class:"login" do %><button id="signup"> Sign Up</button><% end %>
+  </div>
 </p>
-<p id="login"><%= link_to sign_in_path, class:"login" do %><button id="signin"> Sign In</button> <% end %>
-<%= link_to sign_up_path, class:"login" do %><button id="signup"> Sign Up</button><% end %></p>
-</nav>
-<center><p id="welcome">WELCOME TO BOJACK,A PLACE TO BE YOURSELF </p></center>
-
-</html>
+  <p class="homepage-p1">Welcome to Bojack</p>
+  <p class="homepage-p2">Find community, conversation and inspiration about the things you love.</p>
+</div>
