--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 </a><a>  <span class="glyphicon glyphicon-fire" aria-hidden="true"> </span>  Notifications
 </a><a>  <span class="glyphicon glyphicon-envelope" aria-hidden="true"> </span>  Messages</p>
 </a></strong>
-<img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
+<i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
 <span class="follow" style="border-radius:15px;"> <%= link_to "Follow People", index_path %> </span>
 
   <span class="signout" style="border-radius:15px;"> <%= link_to "Sign Out", sign_out_path %> </span>
