--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -62,6 +62,7 @@ text-decoration: none;}
 }
 body {
   background-color: #F5F8FA;
+  width:100%;
 }
 .profile img {
   border-top-left-radius: 10px;
@@ -121,6 +122,10 @@ flex-wrap: wrap;
 
 .textfield {
   font-size: 20px;
+  border-radius: 5px;
+  margin: 8px;
+  border:1px solid #E1E8ED;
+  font-family: 'Roboto', sans-serif;
 }
 .signuplink {
   font-size: 30px;
@@ -351,4 +356,34 @@ html {
 .thoughts {
   font-size: 25px;
   font-weight: bold;
+}
+
+.new-signout {
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.newsignup {
+  border:1px solid #1DA1F2;
+  background-color: #1DA1F2;
+  font-family:'Roboto', sans-serif;
+  font-size: 20px;
+  width:100%;
+  color:white;
+  border-radius: 5px;
+  height:40px;
+  margin-top: 20px;
+}
+
+#navsignup {
+  background-image: linear-gradient(to right, #3498DC, #50c878 100%);
+  color:white;
+}
+
+.newsigninlink {
+  color:white;
+  font-size: 20px;
+  font-family:'Roboto', sans-serif;
 }
