--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,22 +1,20 @@
 <nav id="navsignup">
-  <img src="http://cdn.flaticon.com/png/256/31060.png" alt="" />
-  <%= link_to 'Sign Up', sign_up_path %>
+  <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+  <%= link_to 'Sign Up', sign_up_path, class:"newsigninlink" %>
 </nav>
   <div class="signinpage">
 
-      <h1 id="join">Welcome Back Kind Sir.</h1>
+      <h1 id="join">Welcome Back to Twitter</h1>
       <%= form_tag  do %>
-        <div class="">
-          <%= label_tag :email %>
-          <%= text_field_tag :email %>
+        <div class="textfield">
+          <%= text_field_tag :email, nil, placeholder: 'Email', size:30 %>
         </div>
-        <div class="">
-          <%= label_tag :password %>
-          <%= password_field_tag :password %>
+        <div class="textfield">
+          <%= password_field_tag :password, nil, placeholder: 'Password', size:30  %>
         </div>
 
 
-        <%= submit_tag "Welcome Back", class: "signuplink" %>
+        <%= submit_tag "Log In", class: "newsignup" %>
 
 
       <% end %>
