--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -42,7 +42,7 @@ margin:10px 10px 0 0;
 .homepage-title {
   background-image: linear-gradient(to right, #3498DC, #50c878 100%);
   width:100%;
-  height:100vh;
+  height:100%;
   display:flex;
   flex-direction: column;
   font-family: 'Roboto', sans-serif;
@@ -72,6 +72,7 @@ margin:10px 10px 0 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  height:100%;
 }
 
 .photo-flex img {
@@ -80,11 +81,34 @@ margin:10px 10px 0 0;
   border-radius: 5px;
 }
 
-@media screen and (max-width:415px) {
-  .homepage-p1{
-    font-size: 40px;
+@media screen and (max-width:988px) {
+  .photo-flex img {
+    width:40%;
+    height:285px;
+    margin:10px;
   }
+
   .homepage-p2 {
     font-size: 25px;
+  }
+}
+
+@media screen and (max-width:650px) {
+  .photo-flex img {
+    width:60%;
+    height:250px;
+  }
+}
+
+@media screen and (max-width:415px) {
+  .homepage-p1{
+    font-size: 35px;
+  }
+  .homepage-p2 {
+    font-size: 20px;
+  }
+  .photo-flex img {
+    width:85%;
+    height:230px;
   }
 }
